# anime-jp

./: .gitignore  Cargo.toml  README.md  all_anime.txt  anime_info.py  anime_search.py  download_all.sh  extract_all_subs.sh  main.py  raw_downloader.py  raw_finder.py  requirements.txt  srts  unzip_sub_in_place.sh
src/: anime_raw_search.rs  anime_search.rs  anime_sub_search.rs  main.rs  prelude.rs
src/core/: indexer.rs  mod.rs
src/core/download/: downloader.rs  http.rs  mod.rs  prelude.rs  qbittorrent.rs
src/core/scrapper/: mod.rs
src/qbittorrent/: api.rs  client.rs  downloader.rs  mod.rs
src/qbittorrent/api/: mod.rs  torrents.rs
src/raws/: download.rs  search.rs
src/subs/: download.rs  mod.rs  save.rs  search.rs
