[package]
name = "anime-jp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-nextest = "0.9.49"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
priority-queue = "1.3.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
thiserror = "1.0.38"
