[package]
name = "anime-jp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-nextest = "0.9.49"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
fern = { version = "0.6.1", features = ["colored"] }
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"
log = "0.4.17"
mockall = "0.11.3"
priority-queue = "1.3.1"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
thiserror = "1.0.38"
tokio = "1.25.0"
